--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,18 @@
     <name>Library</name>
     <packaging>war</packaging>
     <version>1.0.0-BUILD-SNAPSHOT</version>
+  <repositories>
+    <repository>
+      <id>spring-test-mvc</id>
+      <url>http://repo.springsource.org/libs-milestone/</url>
+    </repository>
+  </repositories>
     <properties>
         <java-version>1.6</java-version>
-        <org.springframework-version>3.1.1.RELEASE</org.springframework-version>
+        <org.springframework-version>3.1.4.RELEASE</org.springframework-version>
         <org.aspectj-version>1.6.10</org.aspectj-version>
         <org.slf4j-version>1.6.6</org.slf4j-version>
+        <netbeans.hint.deploy.server>Tomcat</netbeans.hint.deploy.server>
     </properties>
     <dependencies>
         <!-- Spring -->
@@ -21,10 +28,36 @@
             <version>${org.springframework-version}</version>
         </dependency>
 <dependency>
-    <groupId>org.springframework</groupId>
-    <artifactId>spring-jdbc</artifactId>
-    <version>${org.springframework-version}</version>
+  <groupId>org.springframework</groupId>
+  <artifactId>spring-test-mvc</artifactId>
+  <version>1.0.0.M2</version>
+  <scope>test</scope>
 </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>${org.springframework-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.3.171</version>
+        </dependency>
+        <dependency>
+            <groupId>org.easymock</groupId>
+            <artifactId>easymock</artifactId>
+            <version>3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>${org.springframework-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${org.springframework-version}</version>
+        </dependency>
         <dependency> <!-- MySQL database driver -->
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
@@ -43,7 +76,7 @@
         <dependency> <!-- Hibernate -->
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
-            <version>4.1.8.Final</version>
+            <version>4.2.0.Final</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
@@ -68,22 +101,17 @@
                  </exclusion>
             </exclusions>
         </dependency>
-<!-- <dependency> -->
-<!--     <groupId>joda-time</groupId> -->
-<!--     <artifactId>joda-time-hibernate</artifactId> -->
-<!--     <version>1.3</version> -->
-<!-- </dependency> -->
-<dependency>
-    <groupId>joda-time</groupId>
-    <artifactId>joda-time</artifactId>
-    <version>2.2</version>
-</dependency>
-<dependency>
-    <groupId>org.jadira.usertype</groupId>
-    <artifactId>usertype.core</artifactId>
-    <version>3.0.0.GA</version>
-</dependency>
-<dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jadira.usertype</groupId>
+            <artifactId>usertype.core</artifactId>
+            <version>3.0.0.GA</version>
+        </dependency>
+        <dependency>
             <groupId>cglib</groupId>
             <artifactId>cglib</artifactId>
             <version>2.2.2</version>
@@ -174,7 +202,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.7</version>
+            <version>4.11</version>
             <scope>test</scope>
         </dependency>        
     </dependencies>
