--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,5 +1,5 @@
-jdbc.driverClassName=org.h2.Driver
-jdbc.url=jdbc:h2:/Users/les/data/libraryDB
-jdbc.username=sa
-jdbc.password=
-hibernate.dialect=org.hibernate.dialect.H2Dialect
+jdbc.driverClassName=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/library
+jdbc.username=root
+jdbc.password=root
+hibernate.dialect=org.hibernate.dialect.MySQLDialect
